--- a/fonctionnement.html
+++ b/fonctionnement.html
@@ -78,9 +78,9 @@
             <div class="economie">
                 <h3 class="anton-regular">Economie</h3>
                 <div class="sous-liens">
-                    <a href="economie.html" class="chau-philomene-one-regular"><p>Une plateforme</p></a><br>
-                    <a href="economie.html" class="chau-philomene-one-regular"><p>Chiffre d'affaire</p></a><br>
-                    <a href="economie.html" class="chau-philomene-one-regular"><p>Modèle économique</p></a><br>
+                    <a href="economie.html" class="chau-philomene-one-regular"><p>plateforme</p></a><br>
+                    <a href="economie.html" class="chau-philomene-one-regular"><p>Graphique</p></a><br>
+                    <a href="economie.html" class="chau-philomene-one-regular"><p>Avantage économique</p></a><br>
                 </div>
             </div>
             <div class="fonctionnement">
