--- a/fonctionnement.html
+++ b/fonctionnement.html
@@ -78,9 +78,9 @@
             <div class="economie">
                 <h3 class="anton-regular">Economie</h3>
                 <div class="sous-liens">
-                    <a href="economie.html" class="chau-philomene-one-regular"><p>plateforme</p></a><br>
-                    <a href="economie.html" class="chau-philomene-one-regular"><p>Graphique</p></a><br>
-                    <a href="economie.html" class="chau-philomene-one-regular"><p>Avantage économique</p></a><br>
+                    <a href="economie.html" class="chau-philomene-one-regular"><p>Une plateforme</p></a><br>
+                    <a href="economie.html" class="chau-philomene-one-regular"><p>Chiffre d'affaire</p></a><br>
+                    <a href="economie.html" class="chau-philomene-one-regular"><p>Modèle économique</p></a><br>
                 </div>
             </div>
             <div class="fonctionnement">
@@ -100,8 +100,8 @@
                 </div>
             </div>             
         </div>
-        <img src="Assets/images/logo_ywh.png" id="YWH" alt="logo YWH">
-        <img src="Assets/images/favicon.ico" id="Y" alt="notre logo">
+        <img src="Assets/images/logo_ywh.png" id="YWH" alt="logo yeswehack">
+        <img src="Assets/images/favicon.ico" id="Y" alt="logo du site">
         <br>
         <br>
         <br>
@@ -109,16 +109,14 @@
             <p id="Suivez-les">Suivez-les</p>
             <p id="Suivez-nous">Suivez-nous</p>
         </div>
-        <br>
-
         <div class="reseaux">
-            <a id="logo_SL1" href="https://www.yeswehack.com/fr"><img src="Assets/images/yeswehack.jpeg" alt="logo YesWeHack"></a>
-            <a id="logo_SL2" href="https://twitter.com/yeswehack"><img src="Assets/images/x.png" alt="logo X"></a>
+            <a id="logo_SL1" href="https://www.yeswehack.com/fr"><img src="Assets/images/yeswehack.jpeg" alt="logo yeswehack"></a>
+            <a id="logo_SL2" href="https://twitter.com/yeswehack"><img src="Assets/images/x.png" alt="logo X (anciennemnt twitter)"></a>
             <a id="logo_SL3" href="https://www.linkedin.com/company/yes-we-hack/"><img src="Assets/images/linkedin.png" alt="logo linkedin"></a>
             <a id="logo_SL4" href="https://github.com/yeswehack"><img src="Assets/images/github.png" alt="logo github"></a>
             <a id="logo_SN" href="https://github.com/bbittige-iut90/SAES1-0506_YesWeHack"><img src="Assets/images/github.png" alt="logo github"></a>
         </div>     
-        <p id="mentions">@2025 SAES1-05-06 IUT-NFC Baptiste AUBRY, BUT informatique, A1</p>
+        <p class="chau-philomene-one-regular" id="mentions">@2025 SAES1-05-06 IUT-NFC Bryan BITTIGER, BUT informatique, A1</p>
     </footer>
 
 </body>
