--- a/fonctionnement.html
+++ b/fonctionnement.html
@@ -70,17 +70,17 @@
             <div class="histoiore">
                 <h3 class="anton-regular">Histoire</h3>
                 <div class="sous-liens">
-                    <a href="#" class="chau-philomene-one-regular"><p>Début</p></a><br>
-                    <a href="#" class="chau-philomene-one-regular"><p>Expansion</p></a><br>
-                    <a href="#" class="chau-philomene-one-regular"><p>YesWeHack Aujourd'hui</p></a><br>
+                    <a href="histoire.html" class="chau-philomene-one-regular"><p>Début</p></a><br>
+                    <a href="histoire.html" class="chau-philomene-one-regular"><p>Expansion</p></a><br>
+                    <a href="histoire.html" class="chau-philomene-one-regular"><p>Aujourd'hui</p></a><br>
                 </div>
             </div>
             <div class="economie">
                 <h3 class="anton-regular">Economie</h3>
                 <div class="sous-liens">
-                    <a href="economie.html" class="chau-philomene-one-regular"><p>Une plateforme</p></a><br>
-                    <a href="economie.html" class="chau-philomene-one-regular"><p>Chiffre d'affaire</p></a><br>
-                    <a href="economie.html" class="chau-philomene-one-regular"><p>Modèle économique</p></a><br>
+                    <a href="economie.html" class="chau-philomene-one-regular"><p>plateforme</p></a><br>
+                    <a href="economie.html" class="chau-philomene-one-regular"><p>Graphique</p></a><br>
+                    <a href="economie.html" class="chau-philomene-one-regular"><p>Avantage économique</p></a><br>
                 </div>
             </div>
             <div class="fonctionnement">
@@ -94,9 +94,9 @@
             <div class="ethique">
                 <h3 class="anton-regular">Ethique</h3>
                 <div class="sous-liens">
-                    <a href="ethique.html" class="chau-philomene-one-regular"><p>White hats</p></a><br>
-                    <a href="ethique.html" class="chau-philomene-one-regular"><p>Missions</p></a><br>
-                    <a href="ethique.html" class="chau-philomene-one-regular"><p>Ethique</p></a><br>
+                    <a href="ethique.html" class="chau-philomene-one-regular"><p>Début</p></a><br>
+                    <a href="ethique.html" class="chau-philomene-one-regular"><p>hackeur ethique</p></a><br>
+                    <a href="ethique.html" class="chau-philomene-one-regular"><p>collaboration</p></a><br>
                 </div>
             </div>             
         </div>
@@ -116,7 +116,7 @@
             <a id="logo_SL4" href="https://github.com/yeswehack"><img src="Assets/images/github.png" alt="logo github"></a>
             <a id="logo_SN" href="https://github.com/bbittige-iut90/SAES1-0506_YesWeHack"><img src="Assets/images/github.png" alt="logo github"></a>
         </div>     
-        <p class="chau-philomene-one-regular" id="mentions">@2025 SAES1-05-06 IUT-NFC Bryan BITTIGER, BUT informatique, A1</p>
+        <p class="chau-philomene-one-regular" id="mentions">@2025 SAES1-05-06 IUT-NFC ALLALI Yanis, BUT informatique, A1</p>
     </footer>
 
 </body>
