--- a/fonctionnement.html
+++ b/fonctionnement.html
@@ -70,33 +70,33 @@
             <div class="histoiore">
                 <h3 class="anton-regular">Histoire</h3>
                 <div class="sous-liens">
-                    <a href="histoire.html" class="chau-philomene-one-regular"><p>Début</p></a><br>
-                    <a href="histoire.html" class="chau-philomene-one-regular"><p>Expansion</p></a><br>
-                    <a href="histoire.html" class="chau-philomene-one-regular"><p>Aujourd'hui</p></a><br>
+                    <a href="#" class="chau-philomene-one-regular"><p>Début</p></a><br>
+                    <a href="#" class="chau-philomene-one-regular"><p>Expansion</p></a><br>
+                    <a href="#" class="chau-philomene-one-regular"><p>Aujourd'hui</p></a><br>
                 </div>
             </div>
             <div class="economie">
                 <h3 class="anton-regular">Economie</h3>
                 <div class="sous-liens">
-                    <a href="economie.html" class="chau-philomene-one-regular"><p>plateforme</p></a><br>
-                    <a href="economie.html" class="chau-philomene-one-regular"><p>Graphique</p></a><br>
-                    <a href="economie.html" class="chau-philomene-one-regular"><p>Avantage économique</p></a><br>
+                    <a href="#Section02_eco" class="chau-philomene-one-regular"><p>plateforme</p></a><br>
+                    <a href="#Section03_eco" class="chau-philomene-one-regular"><p>Graphique</p></a><br>
+                    <a href="#Section04_eco" class="chau-philomene-one-regular"><p>Avantage économique</p></a><br>
                 </div>
             </div>
             <div class="fonctionnement">
                 <h3 class="anton-regular">Fonctionnement</h3>
                 <div class="sous-liens">
-                    <a href="#section1" class="chau-philomene-one-regular"><p>Comment devenir Hunter ?</p></a><br>
-                    <a href="#section2" class="chau-philomene-one-regular"><p>Le classement des hunters</p></a><br>
-                    <a href="#section3" class="chau-philomene-one-regular"><p>Des collaborations uniques</p></a><br>
+                    <a href="fonctionnement.html" class="chau-philomene-one-regular"><p>Comment devenir Hunter ?</p></a><br>
+                    <a href="fonctionnement.html" class="chau-philomene-one-regular"><p>Le classement des hunters</p></a><br>
+                    <a href="fonctionnement.html" class="chau-philomene-one-regular"><p>Des collaborations uniques</p></a><br>
                 </div>
             </div>           
             <div class="ethique">
                 <h3 class="anton-regular">Ethique</h3>
                 <div class="sous-liens">
                     <a href="ethique.html" class="chau-philomene-one-regular"><p>Début</p></a><br>
-                    <a href="ethique.html" class="chau-philomene-one-regular"><p>hackeur ethique</p></a><br>
-                    <a href="ethique.html" class="chau-philomene-one-regular"><p>collaboration</p></a><br>
+                    <a href="ethique.html" class="chau-philomene-one-regular"><p>Expansion</p></a><br>
+                    <a href="ethique.html" class="chau-philomene-one-regular"><p>Aujourd'hui</p></a><br>
                 </div>
             </div>             
         </div>
@@ -116,7 +116,7 @@
             <a id="logo_SL4" href="https://github.com/yeswehack"><img src="Assets/images/github.png" alt="logo github"></a>
             <a id="logo_SN" href="https://github.com/bbittige-iut90/SAES1-0506_YesWeHack"><img src="Assets/images/github.png" alt="logo github"></a>
         </div>     
-        <p class="chau-philomene-one-regular" id="mentions">@2025 SAES1-05-06 IUT-NFC ALLALI Yanis, BUT informatique, A1</p>
+        <p class="chau-philomene-one-regular" id="mentions">@2025 SAES1-05-06 IUT-NFC BOUJU Jarod, BUT informatique, A1</p>
     </footer>
 
 </body>
