--- a/fonctionnement.html
+++ b/fonctionnement.html
@@ -116,7 +116,7 @@
             <a id="logo_SL4" href="https://github.com/yeswehack"><img src="Assets/images/github.png" alt="logo github"></a>
             <a id="logo_SN" href="https://github.com/bbittige-iut90/SAES1-0506_YesWeHack"><img src="Assets/images/github.png" alt="logo github"></a>
         </div>     
-        <p class="chau-philomene-one-regular" id="mentions">@2025 SAES1-05-06 IUT-NFC BOUJU Jarod, BUT informatique, A1</p>
+        <p class="chau-philomene-one-regular" id="mentions">@2025 SAES1-05-06 IUT-NFC AUBRY Baptiste, BUT informatique, A1</p>
     </footer>
 
 </body>
