--- a/fonctionnement.html
+++ b/fonctionnement.html
@@ -70,9 +70,9 @@
             <div class="histoiore">
                 <h3 class="anton-regular">Histoire</h3>
                 <div class="sous-liens">
-                    <a href="#" class="chau-philomene-one-regular"><p>Début</p></a><br>
-                    <a href="#" class="chau-philomene-one-regular"><p>Expansion</p></a><br>
-                    <a href="#" class="chau-philomene-one-regular"><p>Aujourd'hui</p></a><br>
+                    <a href="histoire.html" class="chau-philomene-one-regular"><p>Début</p></a><br>
+                    <a href="histoire.html" class="chau-philomene-one-regular"><p>Expansion</p></a><br>
+                    <a href="histoire.html" class="chau-philomene-one-regular"><p>Aujourd'hui</p></a><br>
                 </div>
             </div>
             <div class="economie">
@@ -94,9 +94,9 @@
             <div class="ethique">
                 <h3 class="anton-regular">Ethique</h3>
                 <div class="sous-liens">
-                    <a href="ethique.html" class="chau-philomene-one-regular"><p>Début</p></a><br>
-                    <a href="ethique.html" class="chau-philomene-one-regular"><p>Expansion</p></a><br>
-                    <a href="ethique.html" class="chau-philomene-one-regular"><p>Aujourd'hui</p></a><br>
+                    <a href="ethique.html" class="chau-philomene-one-regular"><p>White hats</p></a><br>
+                    <a href="ethique.html" class="chau-philomene-one-regular"><p>Missions</p></a><br>
+                    <a href="ethique.html" class="chau-philomene-one-regular"><p>Ethique</p></a><br>
                 </div>
             </div>             
         </div>
