--- a/economie.html
+++ b/economie.html
@@ -230,9 +230,9 @@
             <div class="ethique">
                 <h3 class="anton-regular">Ethique</h3>
                 <div class="sous-liens">
-                    <a href="ethique.html" class="chau-philomene-one-regular"><p>Début</p></a><br>
-                    <a href="ethique.html" class="chau-philomene-one-regular"><p>Expansion</p></a><br>
-                    <a href="ethique.html" class="chau-philomene-one-regular"><p>Aujourd'hui</p></a><br>
+                    <a href="ethique.html" class="chau-philomene-one-regular"><p>White hats</p></a><br>
+                    <a href="ethique.html" class="chau-philomene-one-regular"><p>Missions</p></a><br>
+                    <a href="ethique.html" class="chau-philomene-one-regular"><p>Ethique</p></a><br>
                 </div>
             </div>             
         </div>
@@ -258,4 +258,5 @@
   </body>
 
 </html>
+
 
